--- a/index.html
+++ b/index.html
@@ -11,14 +11,29 @@
             box-sizing: border-box;
         }
 
-        body {
+        body,html {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background: #000000;
+            background: url('SG picture.jpg') no-repeat center center fixed;
+            background-size: cover;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            text-align: center;
             min-height: 100vh;
             padding: 20px;
+            color: white;
+        }
+
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.4); /* 可调整透明度 */
+            z-index: -1;
         }
 
         .countdown-container {
