--- a/index.html
+++ b/index.html
@@ -120,13 +120,9 @@
         }
 
         h1 {
-            font-size: 1.5em;
-            color: #000000;
-            margin-bottom: 20px;
-            font-weight: 800;
-            line-height: 1.2;
-            padding: 0 15px;
-            text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
+            font-size: 2em;
+            margin-bottom: 10px;
+            text-shadow: 0 2px 6px rgba(0, 0, 0, 0.7);
         }
 
         .subtitle {
@@ -143,10 +139,9 @@
         .countdown {
             display: flex;
             justify-content: center;
-            gap: 10px;
+            gap: 15px;
             flex-wrap: wrap;
-            margin-bottom: 0;
-            padding: 0 15px;
+            margin: 25px 0;
         }
 
         .clock-spacer {
@@ -155,13 +150,13 @@
         }
 
         .time-unit {
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 12px;
-            padding: 18px 15px;
-            min-width: 90px;
+            background: rgba(255, 255, 255, 0.15);
+            border-radius: 8px;
+            padding: 12px 8px;
+            min-width: 80px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
             transition: all 0.3s ease;
-            border: 2px solid #000000;
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         .time-unit:hover {
@@ -170,22 +165,15 @@
         }
 
         .time-value {
-            font-size: 2.8em;
-            font-weight: 800;
-            color: #000000;
+            font-size: 2.2em;
+            font-weight: bold;
             display: block;
-            line-height: 1;
-            text-shadow: none;
         }
 
         .time-label {
-            font-size: 0.85em;
-            color: #1a1a1a;
+            font-size: 0.9em;
             margin-top: 8px;
-            display: block;
             text-transform: uppercase;
-            letter-spacing: 1.5px;
-            font-weight: 600;
         }
 
         .end-date {
@@ -198,11 +186,9 @@
         }
 
         .hashtags {
-            margin-top: 5px;
-            font-size: 0.9em;
-            color: #1a1a1a;
-            font-weight: 600;
-            text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
+            margin-top: 20px;
+            font-size: 1.1em;
+            opacity: 0.9;
         }
 
         @media (max-width: 600px) {
