--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         body,html {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             display: flex;
+            background: black;
             flex-direction: column;
             justify-content: center;
             align-items: center;
