--- a/index.html
+++ b/index.html
@@ -175,13 +175,10 @@
             text-transform: uppercase;
         }
 
-        .end-date {
-            font-size: 1.1em;
-            color: #000000;
-            font-weight: 700;
-            margin-bottom: 10px;
-            margin-top: 20px;
-            text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
+        .days .time-value,
+        .seconds .time-value {
+           color: #ff4d4d; /* 红色 */
+           text-shadow: 0 0 8px rgba(255, 77, 77, 0.5);
         }
 
         .hashtags {
